--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -133,12 +133,12 @@
     <div class="xui-attention xa-attention none">
         <div class="xui-twoDimensionBox">
             <div style="margin-left: 8px;margin-top: 32px;">
-                <p>1、长按二维码关注“</p><p style="color: orangered">{{ mpUserPreviewName }}</p><p>”公众号</p>
+                <p>1.长按二维码关注“</p><p style="color: orangered">{{ mpUserPreviewName }}</p><p>”公众号</p>
             </div>
             <img src="{{ qrcode_url }}" alt="" class="xui-twoDimension">
             <p></p>
             <div style="margin-left:8px;">
-                <p>2、回复：“</p><p style="color: orangered">{{ reply_content|safe }}</p><p>”，即可参加活动</p>
+                <p>2.回复：“</p><p style="color: orangered">{{ reply_content|safe }}</p><p>”，即可参加活动</p>
             </div>
             <div class="xui-closeBtn xa-closeBtn"></div>
         </div>
