用户名过长换行

--- a/weapp/termite/static/css/apps/powerme.css
+++ b/weapp/termite/static/css/apps/powerme.css
@@ -68,6 +68,9 @@ hr{
 }
 .wui-powerme-container .wui-i-states ul li:not(.wui-i-top100-title){
     border-bottom: 1px dotted #ffffff;
+    height: 55px;
+    width: 90%;
+    display: inline-flex;
 }
 .wui-powerme-container .wui-i-states ul li:nth-child(1) span{
     min-width: 45px;
@@ -119,7 +122,11 @@ hr{
     font-weight: bold;
 }
 .wui-powerme-container .wui-i-top100-name {
+    display: block;
+    height: 55px;
     margin-left: 15px;
+    overflow: hidden;
+    width: 80%;
 }
 .wui-i-top100-power {
     float: right;
