--- a/weapp/termite/static/css/apps/powerme.css
+++ b/weapp/termite/static/css/apps/powerme.css
@@ -70,7 +70,7 @@ hr{
     border-bottom: 1px dotted #ffffff;
     height: 55px;
     width: 90%;
-    display: inline-flex;
+    display: inline-block;
 }
 .wui-powerme-container .wui-i-states ul li:nth-child(1) span{
     min-width: 45px;
@@ -122,7 +122,7 @@ hr{
     font-weight: bold;
 }
 .wui-powerme-container .wui-i-top100-name {
-    display: block;
+    display: inline-block;
     height: 55px;
     margin-left: 15px;
     overflow: hidden;
@@ -140,6 +140,7 @@ hr{
     margin-left: -8px;
     text-align: center;
     padding-right: 0;
+    float: left;
 }
 .wa-top100 li:nth-child(2) .wui-i-top100-range {
   background-position: -156px 7px;
