--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -235,11 +235,11 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
              </div>
             <!-- 普通商品 -->
             <div class="xa-not_selloutAlert clearfix xui-hide" style="padding:3px 0;">
-                <div class="xa-disabledBuyLinks xui-inlineblock clearfix" style="padding:3px 0;">
+                <div class="xa-disabledBuyLinks xui-inlineblock clearfix">
                     <a href="javascript:void(0);" class="xui-btn xui-addCartBtn xa-canNotBuyButton" data-type='shoppingCart'>加入购物车</a>
                     <a href="javascript:void(0);" class="xui-btn xui-buyBtn xa-canNotBuyButton" data-type='buy'>立即购买</a>
                 </div>
-                <div class="xa-enabledBuyLinks xui-inlineblock xui-hide clearfix" style="padding:3px 0;">
+                <div class="xa-enabledBuyLinks xui-inlineblock xui-hide clearfix">
                     <a href="javascript:void(0);" class="xui-btn xui-addCartBtn xa-addShoppingCartBtn" data-type='shoppingCart'>加入购物车</a>
                     <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=order&action=edit&product_id={{product.id}}&product_count=1&product_model_name=standard" class="xui-btn xa-buyBtn xui-buyBtn" data-type='buy'>立即购买</a>
                 </div>
