--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -271,7 +271,7 @@
                 $('.wa-masterinfo').css('opacity',0);
             }
         };
-
+        toggle_show();
         window.onscroll = function(){
             toggle_show();
         };
