--- a/weapp/card/templates/card/editor/list_weizoom_card_detail.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card_detail.html
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="xa-listView" 
-                    data-ui-role="advanced-table"  
+                    data-ui-role="advanced-table-weizoom-card"  
                     data-args='{"weizoom_card_rule_id":"{{weizoom_card_rule.id}}"}' 
                     data-enable-paginator="true" 
                     data-app="card" 
@@ -169,7 +169,7 @@
 $(document).ready(function() {
     var filterBox = new W.view.card.cards.cardListFilter({
         el: ".xa-cardListFilterView",
-        dataView: $('[data-ui-role="advanced-table"]').data('view'),
+        dataView: $('[data-ui-role="advanced-table-weizoom-card"]').data('view'),
         userWebappId: {{user.get_profile.webapp_id}},
         status:''
     });
@@ -181,6 +181,196 @@ $(document).ready(function() {
         }
 
         window.open(url);
+    });
+    var CardRule = W.view.common.AdvancedTable.extend({
+        load: function(from_goto) {
+        console.log("11111111111");
+        //构造传递给后台api的参数
+        var args = {};
+        
+        // 解决BUG 002900: 微站-订单管理-创建筛选标签可以创建但是创建好的点击没有效果
+        // 去掉注释部分 
+        //_.extend(args, this.args);
+        if (this.options.args) {
+            args = $.parseJSON(this.options.args);
+        }
+        
+        if (this.sortAttr) {
+            args['sort_attr'] = this.sortAttr;
+        }
+        if (this.searchQuery) {
+            args['query_attr'] = this.searchAttr;
+            args['query'] = this.searchQuery;
+        }
+        if (this.filterAttr) {
+            args['filter_attr'] = this.filterAttr;
+            args['filter_value'] = this.filterValue;
+        }
+
+        if (this.itemCountPerPage) {
+            args['count_per_page'] = this.itemCountPerPage;
+            args['page'] = this.curPage;
+            args['enable_paginate'] = 1
+        }
+
+        if (this.enableSort) {
+            if (from_goto) {
+                //来自翻页的load，保持排序行为
+            } else {
+                this.enableSort = false;
+            }
+        }
+        var _this = this;
+        W.getLoadingView().show();
+        W.getApi().call({
+            app: this.options.app,
+            api: this.options.api,
+            args: args,
+            scope: this,
+            success: function(data) {
+                W.getLoadingView().hide();
+                console.log('77',this.userWebappId);
+                var $node = $.tmpl(this.template, {items: data.items, data: data,can_active_card: can_active_card, categories: data.categories, 'userWebappId': _this.userWebappId});
+
+                //table不存在
+                this.$content.html($node);
+
+                //初始化searchable header
+                this.$content.find('.tx_searchable').css('cursor', 'pointer').append(' <i class="icon-search"></i>').popover({
+                    placement: 'bottom',
+                    title: '输入搜索文本',
+                    html: true,
+                    trigger: 'manual',
+                    content: '<input type="text" class="input-medium inline" />&nbsp;<button class="btn btn-success tx_searchable_confirm_btn mb10">确定</button>'
+                });
+
+                //初始化sortable header
+                this.$content.find('.tx_sortable').css('cursor', 'pointer').append(' <i class="hide icon-arrow-up"></i>');
+                //显示当前已排序column的排序指示图标
+                var sortedDirection = 'up';
+                var sortedAttr = data.sortAttr;
+                if (sortedAttr[0] === '-') {
+                    sortedDirection = 'down';
+                    sortedAttr = sortedAttr.substring(1);
+                }
+
+                var selector = '[data-sort-attr="' + sortedAttr + '"]';
+                var $th = this.$content.find(selector);
+                if ($th.length > 0) {
+                    $th.attr('data-sort-direction', sortedDirection);
+                    var newIconClass = 'icon-arrow-' + sortedDirection;
+                    $th.find('i').removeClass('icon-arrow-up').addClass(newIconClass).removeClass('hide');
+                }
+
+                //初始化filterable header
+                var $filterables = this.$content.find('.tx_filterable');
+                $filterables.css('cursor', 'pointer').find('.dropdown-toggle').append(' <i class="icon-chevron-down"></i>');
+                //添加搜索框
+                var onInputKeyUpHandler = function(event) {
+                    var $input = $(event.target);
+                    var $li = $(event.currentTarget)
+                    var text = $.trim($input.val());
+                    if (text === "") {
+                        $li.nextAll('li').show();
+                    } else {
+                        $li.next('li').nextAll('li').hide().each(function() {
+                            var $el = $(this);
+                            var linkText = $el.text();
+                            if (linkText.indexOf(text) !== -1) {
+                                //如果链接文本中存在待搜索的字符串，显示该li
+                                $el.show();
+
+                            } 
+                        });
+                    }
+                }
+                $filterables.each(function() {
+                    var $filterable = $(this);
+                    var $li = $('<li><input /><i class="icon-search"></i></li>');
+                    $li.on('click.dropdown.data-api', function(event){
+                        return false;
+                    });
+                    var $input = $li.find('input');
+                    $li.keyup(onInputKeyUpHandler);
+                    $filterable.find('.dropdown-menu').css('margin-top', '8px').find('li:first').before($li);
+                });
+
+                $filterables.find('.dropdown-toggle').dropdown();
+                 
+                //处理排序
+                //处理翻页
+                if (this.paginationView) {
+                    this.paginationView.setPageInfo(data.pageinfo);
+                    this.paginationView.show();
+                }
+
+                //处理拖动排序
+                if (this.enableSort) {
+                    this.$el.find('thead tr').append('<th width="100">调整顺序</th>');
+                    this.$el.find('tbody tr').append('<td>'
+                        + '<a class="btn btn-mini xa-inner-sortTrigger" data-direction="up" href="javascript:void(0);" data-toggle="tooltip" title="向上" data-placement="bottom"><i class="icon-arrow-up"></i></a>'
+                        + '<a class="btn btn-mini xa-inner-sortTrigger ml1" data-direction="down" href="javascript:void(0);" data-toggle="tooltip" title="向下" data-placement="bottom"><i class="icon-arrow-down"></i></a>'
+                        + '<a class="btn btn-mini xa-inner-sortTrigger ml1" data-direction="top" href="javascript:void(0);" data-toggle="tooltip" title="置顶" data-placement="bottom"><i class="icon-hand-up"></i></a>'
+                    );
+                    /*
+                    $tbody = this.$el.find('tbody');
+                    $sortHandler = $tbody.find('td.wui-advanced-table-weizoom-card-sort-handler');
+                    $sortHandler.wrapInner('<div class="fl"></div>');
+                    $sortHandler.prepend('<div class="fl wui-inner-real-sort-handler" style="cursor: move;"><i class=" icon-resize-vertical"></i></div>');
+                    $tbody.sortable({
+                        axis: 'y',
+                        helper: this.storHelper,
+                        placeholder: "ui-state-highlight",
+                        cursor: 'move',
+                        handle: '.wui-inner-real-sort-handler',
+                        stop: _.bind(function(options) {
+                            this.submitForSort();
+                        }, this)
+                    });
+                    */
+                }
+            },
+            error: function(resp) {
+                W.getLoadingView().show();
+                // alert('加载分类失败!');
+            }
+        });
+    },
+    });
+    W.registerUIRole('div[data-ui-role="advanced-table-weizoom-card"]', function() {
+        var $div = $(this);
+        var app = $div.attr('data-app');
+        var api = $div.attr('data-api');
+        var args = $div.attr('data-args');
+        var template = $div.attr('data-template-id');
+        var initSort = $div.attr('data-init-sort');
+        var enablePaginator = !!($div.attr('data-enable-paginator') === 'true');
+        var enableSort = !!($div.attr('data-enable-sort') === 'true');
+        var sortApi = $div.attr('data-sort-api');
+        var itemCountPerPage = $div.attr('data-item-count-per-page');
+        var userWebappId = $div.attr('data-user-webapp-id');
+        if (itemCountPerPage) {
+            itemCountPerPage = parseInt(itemCountPerPage);
+        } else {
+            itemCountPerPage = 15;
+        }
+
+        var advancedTable = new CardRule({
+            el: $div[0],
+            template: template,
+            app: app,
+            api: api,
+            args: args,
+            initSort: initSort,
+            itemCountPerPage: itemCountPerPage,
+            enablePaginator: enablePaginator,
+            enableSort: enableSort,
+            sortApi: sortApi,
+            userWebappId: userWebappId
+        });
+        advancedTable.render();
+
+        $div.data('view', advancedTable);
     });
 });
 </script>
@@ -309,7 +499,7 @@ $(document).ready(function() {
                     },
                     success: function(data) {
                         W.finishConfirm2();
-                        $('div[data-ui-role="advanced-table"]').data('view').reload();
+                        $('div[data-ui-role="advanced-table-weizoom-card"]').data('view').reload();
                     },
                     error: function(resp) {
                         W.showHint('error','失败');
@@ -375,7 +565,7 @@ $(document).ready(function() {
                     },
                     success: function(data) {
                         W.finishConfirm2();
-                        $('div[data-ui-role="advanced-table"]').data('view').reload();
+                        $('div[data-ui-role="advanced-table-weizoom-card"]').data('view').reload();
                     },
                     error: function(resp) {
                         if(resp.code == 500){
@@ -444,7 +634,7 @@ $(document).ready(function() {
                     },
                     success: function(data) {
                         W.finishConfirm2();
-                        $('div[data-ui-role="advanced-table"]').data('view').reload();
+                        $('div[data-ui-role="advanced-table-weizoom-card"]').data('view').reload();
                     },
                     error: function(resp) {
                         if(resp.code == 500){
@@ -478,7 +668,7 @@ $(document).ready(function() {
                     },
                     success: function(data) {
                         W.finishConfirm();
-                        $('div[data-ui-role="advanced-table"]').data('view').reload();
+                        $('div[data-ui-role="advanced-table-weizoom-card"]').data('view').reload();
                     },
                     error: function(resp) {
                         W.showHint('error','失败');
@@ -511,7 +701,7 @@ $(document).ready(function() {
                     args: data,
                     success: function(data) {
                         $('[name="number"]').val(data.count);
-                        $('div[data-ui-role="advanced-table"]').data('view').reload();
+                        $('div[data-ui-role="advanced-table-weizoom-card"]').data('view').reload();
                     },
                     error: function(resp) {
                         W.showHint('error','追加微众卡失败！');
