--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -75,12 +75,14 @@
         padding: 16% 10% 16% 9%;
         position: fixed;
         top: 20%;
+        width: 60%;
         z-index: 11111;
     }
     .xui-spritebg.xui-successHint-img {
         display: inline-block;
         height: 33px;
         width: 46px;
+        float: left;
     }
     .xui-attention .xui-twoDimensionBox {
         background: url("/termite_static/img/component/powerme/attention.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
@@ -127,7 +129,7 @@
     <div class="xui-powerSucceed none">
         <div class="f15 xui-successHint xui-spritebg">
             <div class="xui-spritebg xui-successHint-img"></div>
-            <div style="display: inline-block;color: #333;"><p>成功帮{{ page_owner_name|safe }}助力值+1</p><p>关系好就是任性！</p></div>
+            <div style="display: inline-block;color: #333;width: 75%;"><p>成功帮{{ page_owner_name|safe }}助力值+1</p><p>关系好就是任性！</p></div>
         </div>
     </div>
     <div class="xui-attention xa-attention none">
