--- a/weapp/card/templates/card/editor/weizoom_num_card_detail.html
+++ b/weapp/card/templates/card/editor/weizoom_num_card_detail.html
@@ -140,11 +140,11 @@
                 </tr>
             </thead>
             <tbody>
-            {{each(i,card_order) items}}
+            {{each(i,card_operation) items}}
                 <tr>
-                    <td>${card_order.money}</td>
-                    <td>${card_order.remainder}</td>
-                    <td>{{html card_order.use_name}}</td>
+                    <td>${card_operation.operater_name}</td>
+                    <td>${card_operation.operate_log}</td>
+                    <td>${card_operation.created_at}</td>
                 </tr>
                 {{/each}}
             </tbody>
