[朱天琦][f_mall_5558]更换所有首页链接

--- a/weapp/templates/global_navbar.html
+++ b/weapp/templates/global_navbar.html
@@ -41,7 +41,7 @@
             <div class="xui-bottomNav">
                 <ul class="">
                     <li class="xa-outLink" data-page="home">
-                        <a href="/workbench/jqm/preview/?workspace_id=home_page&webapp_owner_id={{request.webapp_owner_id}}&project_id=0"><i class="xui-bg"></i></a>
+                        <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=homepage"><i class="xui-bg"></i></a>
                     </li>
                     <li class="xa-category" data-page="product-category"><i class="xui-bg{% if in_design_mode %} xui-active {% endif %}"></i></li>
                     <li class="xa-outLink" data-page="shopping-cart">
