--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -107,7 +107,7 @@
         {% if is_deleted_data %}
             <div data-role="content" data-theme="x" class="tc" style="background: transparent;">
                 <h2 style="margin-top: 100px;">您访问的数据已被删除</h2>
-                <a data-theme="x" href="{{request|get_back_homepage_url:homepage_workspace_info}}" data-role="button" class="xui-btn mt20">返回首页</a>
+                <a data-theme="x" href="./?woid={{request.webapp_owner_id}}&module=mall&model=homepage" data-role="button" class="xui-btn mt20">返回首页</a>
             </div>
         {% else %}
              <div data-ui-role="attentionAlert" class="xui-attentionAlert"
@@ -154,8 +154,6 @@
             W.pageTitle = "{{page_title}}";
             W.errorMessage = null;
 
-            /* 返回首页链接地址 */
-            W.backHomePageUrl = "{{request|get_back_homepage_url:homepage_workspace_info}}";
 
             {% if messages %}
             {% for message in messages %}
