[朱天琦][f_mall_5727]update

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
@@ -43,9 +43,12 @@
             </a>
             {% else %}
                 {% if order.status == 4%}
-                    <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}"><span class="mr20 pa xui-gray-7f em85" style="right:0;top:14px;">暂无跟踪记录</span><span class="xui-icon xui-icon-rightarrow" style="border-color:#999"></span></a>
+                <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}">
+                    <p class="em95 c6">暂无跟踪记录</p>
+                    <span class="xui-icon xui-icon-rightarrow" style="right:12px;"></span>
+                </a>
                 {% else %}
-                暂无物流信息
+                    暂无物流信息
                 {% endif %}
             {% endif %}
         </div>
@@ -144,7 +147,14 @@
                 <span class="xui-icon xui-icon-rightarrow" style="right:12px"></span>
             </a>
             {% else %}
-                暂无物流信息
+                {% if order.status == 4%}
+                <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}">
+                    <p class="em95 c6">暂无跟踪记录</p>
+                    <span class="xui-icon xui-icon-rightarrow" style="right:12px;"></span>
+                </a>
+                {% else %}
+                    暂无物流信息
+                {% endif %}
             {% endif %}
         </div>
         </fieldset>
