优化未匹配的会员等级促销初始隐藏

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -47,7 +47,7 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
             </div>
         </div>
         {% if product.promotion or hint or product.integral_sale %}
-        <div class="xui-section xui-section-title clearfix xa-promotionSection xui-promotionSection pr" style="min-height:17px;">
+        <div class="xui-section xui-section-title clearfix xa-promotionSection xui-promotionSection pr xui-hide" style="min-height:17px;">
             <div class="xui-upDecorate-left"></div>
             <div class="xui-upDecorate-right"></div>
             {% if product.promotion and product.promotion_model.is_active %}
