--- a/weapp/card/templates/card/editor/list_weizoom_card_detail.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card_detail.html
@@ -139,7 +139,7 @@
                     ${card.valid_time_from}</br>
                     ${card.valid_time_to}
                 </td>
-                <td>
+                <td style="max-width: 180px;">
                     ${card.remark}
                 </td>
                 <td>
