--- a/weapp/card/templates/card/editor/weizoom_num_card_detail.html
+++ b/weapp/card/templates/card/editor/weizoom_num_card_detail.html
@@ -134,8 +134,8 @@
         <table class="table table-bordered xui-productList xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg">
             <thead>
                 <tr>
-                    <th>操作时间</th>
-                    <th>用户名</th>
+                    <th style="width: 33.33333333%">操作时间</th>
+                    <th style="width: 33.33333333%">用户名</th>
                     <th>操作</th>
                 </tr>
             </thead>
