--- a/weapp/card/templates/card/editor/list_weizoom_card_detail.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card_detail.html
@@ -132,14 +132,14 @@
                 <td>
                     ${card.used_money}
                 </td>
-                <td>
+                <td style="min-width: 115px;">
                     ${card.activated_at}
                 </td>
-                <td>
+                <td style="min-width: 115px;">
                     ${card.valid_time_from}</br>
                     ${card.valid_time_to}
                 </td>
-                <td style="max-width: 180px;">
+                <td style="max-width: 160px;">
                     ${card.remark}
                 </td>
                 <td>
