--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -154,8 +154,7 @@
             W.pageTitle = "{{page_title}}";
             W.errorMessage = null;
             /* 返回首页链接地址 */
-            W.backHomePageUrl = "{{request|get_back_homepage_url:homepage_workspace_info|safe}}";
-            localStorage.setItem('homepage_url',W.backHomePageUrl);
+            localStorage.setItem('woid',W.webappOwnerId);
             {% if messages %}
             {% for message in messages %}
             W.errorMessage = "{{message}}";
