--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -30,6 +30,7 @@
         <link type="text/css" rel="stylesheet" href="/termite_static/css/common_widget.css">
         <link type="text/css" rel="stylesheet" href="/termite_static/v4/css/idangerous.swiper.css">
         <link rel="stylesheet" type="text/css" href="/static_v2/css/cloudHousekepper.css">
+        <link type="text/css" rel="stylesheet"  href="/webapp_static/backend_default_v3/css/default_v3.css">
         <!-- *end_prunt_task* -->
 
 
@@ -71,7 +72,7 @@
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/attentionAlert.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/alert.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/appalert.js"></script>
-        <script type="text/javascript" src="/termite_static/v3/gmu/widget/uploadImg.js"></script> 
+        <script type="text/javascript" src="/termite_static/v3/gmu/widget/addImg.js"></script>
 
         <script type="text/javascript" src="/termite_static/v3/system/debug.js"></script>
         <!-- *end_prunt_task* -->
@@ -429,7 +430,7 @@
                             }else if (inputType === 'imgarea') {
                                 var picture_list = [];
                                 $control.find('img').each(function(){
-                                   if($(this).attr('src').indexOf('data:image') != -1){picture_list.push($(this).attr('src'))}
+                                    picture_list.push($(this).attr('data-src'))
                                 });
                                 var value = JSON.stringify(picture_list);
                             }
